--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator made by Abhinav</title>
-    <link href="/css/ak.css" rel="stylesheet" type="text/css"/>
-    <link href="/css/utils.css" rel="stylesheet" type="text/css"/>
+    <link href="ak.css" rel="stylesheet" type="text/css"/>
+    <link href="utils.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <h1 class="text-center">Welcome to my Calculator</h1>
